# scaffold-godot-rust

./: Cargo.toml  LICENSE  README.md
src/: generate_files.rs  main.rs
